--- a/linear-search.ipynb
+++ b/linear-search.ipynb
@@ -14,28 +14,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "af3de717",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "## Linear Search in 1D Arrays/Lists:\n",
-    "\n",
     "def linear_search(list1, target) -> int:\n",
     "    for i in range(len(list1)):\n",
     "        if target == list1[i]:\n",
     "            print(i)\n",
     "            break\n",
     "    else:\n",
-    "        print(\"Not Found\")"
+    "        return -1\n",
+    "    \n",
+    "#example:\n",
+    "list1 = [1,23,44,22,77,00]\n",
+    "linear_search(list1,target=44)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "5dd63cad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "## Linear Search in 2D Lists:\n",
     "\n",
@@ -43,18 +62,33 @@
     "    for i in range(len(list1)):\n",
     "        for j in range(len(list1[i])):\n",
     "            if target == list1[i][j]:\n",
-    "                print(i,j)\n",
+    "                print([i,j])\n",
     "                return\n",
     "    else:\n",
-    "        print(\"Not Found\")"
+    "        return -1\n",
+    "    \n",
+    "#example:\n",
+    "list1 = [[1,45,6,6],[5,7,9,8]]\n",
+    "linear_search_2D(list1,target=9)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "ed2ed6e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Linear Search in Strings:\n",
     "## implemention is same as List\n",
@@ -65,26 +99,113 @@
     "            print(i)\n",
     "            break\n",
     "    else:\n",
-    "        print(\"Not Found\")"
+    "        return -1\n",
+    "    \n",
+    "#example:\n",
+    "str1 = 'harshini'\n",
+    "linear_search_str(str1, target='u')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "821db82e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "## Linear Search with Sub-strings:\n",
     "\n",
     "def linear_search_sub_str(str1, sub_str):\n",
-    "    for i in range(len(str1)-len(sub_str)-1):\n",
+    "    for i in range(len(str1)-len(sub_str)+1):\n",
     "        if sub_str == str1[i:i+len(sub_str)]:\n",
-    "            print(i,i+len(sub_str))\n",
+    "            print([i,i+len(sub_str)-1])\n",
     "            break\n",
     "    else:\n",
-    "        print(\"Not Found\")"
+    "        return -1\n",
+    "    \n",
+    "#example:\n",
+    "str1 = 'harshini'\n",
+    "linear_search_sub_str(str1, sub_str='ini')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "233d331b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Find number of elements with even number of digits in a list\n",
+    "## to manipulate them, we have to use strings --> doing len(str(i)) gives us the number of digits in a element at 'i'th index\n",
+    "\n",
+    "def even_digit_elements(list1) -> int:\n",
+    "    count = 0\n",
+    "    for i in list1:\n",
+    "        if len(str(i)) % 2 == 0:\n",
+    "            count += 1\n",
+    "    print(count)\n",
+    "\n",
+    "#example:\n",
+    "list1 = [222, 7723, 873643, 8, 98]\n",
+    "even_digit_elements(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b8a57a7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 987, 2: 6543}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Count number of digits in a list and return the elements with sum greater than target\n",
+    "## great use of len(str), loops, and enumerate\n",
+    "\n",
+    "def digits_with_higher_sum(list1, target):\n",
+    "    dict1 = {}\n",
+    "    for index,num in enumerate(list1):\n",
+    "        sum = 0\n",
+    "        for x in str(num):\n",
+    "            sum += int(x)\n",
+    "        if sum > target:\n",
+    "            dict1[index] = num\n",
+    "    print(dict1)\n",
+    "\n",
+    "#example\n",
+    "list1 = [224, 987, 6543, 634, 23]\n",
+    "digits_with_higher_sum(list1, target=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "608eaf6c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
