Linear Search Completed

--- a/linear-search.ipynb
+++ b/linear-search.ipynb
@@ -201,11 +201,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "608eaf6c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Optimized way to find number of digits in a list\n",
+    "import math\n",
+    "\n",
+    "num = 8343\n",
+    "x = int(math.log10(num))+1\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "71abf678",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Leetcode Max Wealth Problem\n",
+    "\n",
+    "## accounts[i][j] means amount of money 'i'th person has in 'j'th bank. \n",
+    "## goal --> return wealth the richest customer has\n",
+    "\n",
+    "accounts = [[1,2,3],[3,2,1]]\n",
+    "\n",
+    "def wealth_of_richest(accounts) -> int:\n",
+    "    max_wealth = 0\n",
+    "    for customer in accounts:\n",
+    "        wealth = sum(customer)\n",
+    "        if wealth > max_wealth:\n",
+    "            max_wealth = wealth\n",
+    "    return max_wealth\n",
+    "\n",
+    "print(wealth_of_richest(accounts))\n",
+    "\n",
+    "# optimized version \n",
+    "\n",
+    "def wealth_of_richest_optim(accounts) -> int:\n",
+    "    return max(sum(customer) for customer in accounts)\n",
+    "\n",
+    "print(wealth_of_richest_optim(accounts))"
+   ]
   }
  ],
  "metadata": {
