--- a/linear-search.ipynb
+++ b/linear-search.ipynb
@@ -9,7 +9,14 @@
     "Notes:\n",
     "- ⁠arrays are basically lists in python\n",
     "- linear search in a string is same as a list --> they are stored in contiguous memory just like arrays/lists.\n",
-    "- ⁠item assignment is not possible in strings cause they are immutable"
+    "- ⁠item assignment is not possible in strings cause they are immutable\n",
+    "\n",
+    "Time Complexity:\n",
+    "- Best Case: O(1)\n",
+    "- Worst Case: O(n)\n",
+    "- Average Case: O(n)\n",
+    "\n",
+    "Space Complexity: O(1)"
    ]
   },
   {
