--- a/binary-search.ipynb
+++ b/binary-search.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "dc6b4266",
    "metadata": {},
    "outputs": [
@@ -101,11 +101,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "0f3a8ff3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Order Agnostic Binary Search\n",
+    "## goal - to have the Time Complexity same as vanilla binary search\n",
+    "\n",
+    "def order_agnostic_binary(list1, target):\n",
+    "    start = 0\n",
+    "    end = len(list1)-1\n",
+    "    is_ascending = list1[start] < list1[end]\n",
+    "    while(start<=end):\n",
+    "        mid = start + ((end-start)//2)\n",
+    "        if target == list1[mid]:\n",
+    "            return mid\n",
+    "    \n",
+    "        if is_ascending:\n",
+    "            if target < list1[mid]:\n",
+    "                end = mid - 1\n",
+    "            elif target > list1[mid]:\n",
+    "                start = mid + 1\n",
+    "        else:\n",
+    "            if target < list1[mid]:\n",
+    "                start = mid + 1\n",
+    "            elif target > list1[mid]:\n",
+    "                end = mid - 1\n",
+    "    return -1\n",
+    "    \n",
+    "# example\n",
+    "list1 = [1,4,6,22,34,45,54,65,76,86,97,100]\n",
+    "print(order_agnostic_binary(list1, target=100))\n",
+    "\n",
+    "list2 = [1000, 888, 442, 332, 287, 221, 144, 99, 50, 30, 10, 1]\n",
+    "print(order_agnostic_binary(list1=list2, target=50))"
+   ]
   }
  ],
  "metadata": {
