--- a/Leetcode/Searching.ipynb
+++ b/Leetcode/Searching.ipynb
@@ -9,26 +9,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "512cac6f",
-   "metadata": {},
-   "source": [
-    "1. Sqrt(x) \n",
-    "\n",
-    "- Given a non-negative integer x, return the square root of x rounded down to the nearest integer. The returned integer should be non-negative as well.\n",
-    "\n",
-    "- You must not use any built-in exponent function or operator.\n",
-    "\n",
-    "- For example, do not use pow(x, 0.5) in c++ or x ** 0.5 in python."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "64d563e1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sqrt(x) \n",
+    "\n",
+    "# Given a non-negative integer x, return the square root of x rounded down to the nearest integer. The returned integer should be non-negative as well.\n",
+    "\n",
+    "# You must not use any built-in exponent function or operator.\n",
+    "\n",
+    "# For example, do not use pow(x, 0.5) in c++ or x ** 0.5 in python.\n",
+    "\n",
     "# Initial Soln\n",
     "\n",
     "def sqrt(x:int) -> int:\n",
@@ -49,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b91da0c9",
+   "id": "ad3ce953",
    "metadata": {},
    "outputs": [],
    "source": []
