--- a/Leetcode/Searching.ipynb
+++ b/Leetcode/Searching.ipynb
@@ -9,6 +9,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "192d927c",
+   "metadata": {},
+   "source": [
+    "## hacks:\n",
+    "- If you’re looking for a number and there's a clear \"yes/no\" condition to test that number - try binary search."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "64d563e1",
@@ -42,8 +51,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ad3ce953",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 374. Guess Number Higher or Lower\n",
+    "\n",
+    "def guessNumber(self, n: int) -> int:\n",
+    "        start= 1\n",
+    "        while start<=n:\n",
+    "            mid = start + ((n-start)//2)\n",
+    "            if guess(mid) == 0: return mid\n",
+    "            elif guess(mid) == 1: start = mid + 1\n",
+    "            else: n = mid - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dafa4fa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 278. First Bad Version\n",
+    "\n",
+    "def firstBadVersion(self, n: int) -> int:\n",
+    "        start,end = 1,n\n",
+    "        if n == 1:\n",
+    "            if isBadVersion(1):\n",
+    "                return 1\n",
+    "            else:\n",
+    "                return\n",
+    "        while start<end:\n",
+    "            mid = start + (end-start)//2\n",
+    "            if isBadVersion(mid): end = mid\n",
+    "            else: start = mid + 1\n",
+    "        return start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c57338f1",
    "metadata": {},
    "outputs": [],
    "source": []
