--- a/binary-search.ipynb
+++ b/binary-search.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "0f3a8ff3",
    "metadata": {},
    "outputs": [
@@ -145,6 +145,65 @@
     "\n",
     "list2 = [1000, 888, 442, 332, 287, 221, 144, 99, 50, 30, 10, 1]\n",
     "print(order_agnostic_binary(list1=list2, target=50))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "130fcf5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rough \n",
+    "# list1 = [[1,23,343,5,64,65,7],[1,23,343,5,64,65,7]]\n",
+    "# list2 = [['stringwerwerew', 'ygrjyaegr'], ['dfher', 'ahrgehrge']]\n",
+    "# len(list1[0])\n",
+    "# len(list2[0][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d43e16ec",
+   "metadata": {},
+   "source": [
+    "### Binary Search on 2D Arrays\n",
+    "The goal must be to reduce the number of searches as much as possible "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "40d1f0ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sorted row-wise and column-wise\n",
+    "\n",
+    "def binary_search_on_2D(list1, target) -> list:\n",
+    "    row = 0\n",
+    "    col = len(list1[0]) - 1\n",
+    "    while row < len(list1) and col >= 0:\n",
+    "        if target == list1[row][col]:\n",
+    "            return [row,col]\n",
+    "        elif target < list1[row][col]:\n",
+    "            row += 1\n",
+    "        else:\n",
+    "            col -= 1\n",
+    "\n",
+    "# example\n",
+    "list1 = [[1,23,343,5,64,65,70],[2,25,344,7,66,68,72]]\n",
+    "binary_search_on_2D(list1, target=343)\n"
    ]
   }
  ],
