--- a/Leetcode/Searching.ipynb
+++ b/Leetcode/Searching.ipynb
@@ -92,8 +92,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c57338f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ceiling Problem - find the smallest element in array greater than or equal to target\n",
+    "\n",
+    "def ceiling(list1:list,target:int) -> int:\n",
+    "    start, end = 0, len(list1)-1\n",
+    "    while start <= end:\n",
+    "        mid = (start+end)//2\n",
+    "        if list1[mid] == target:\n",
+    "            return mid\n",
+    "        elif target < list1[mid]:\n",
+    "            end  = mid-1\n",
+    "        else:\n",
+    "            start = mid+1\n",
+    "    return list1[start]\n",
+    "\n",
+    "#example\n",
+    "\n",
+    "list1 = [1,4,5,7,9,10,11,18]\n",
+    "print(ceiling(list1,target=6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73532978",
    "metadata": {},
    "outputs": [],
    "source": []
