--- a/binary-search.ipynb
+++ b/binary-search.ipynb
@@ -71,7 +71,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 10)\n"
+      "(3, 10)\n",
+      "(2, 2)\n"
      ]
     }
    ],
@@ -89,14 +90,17 @@
     "        elif target > list1[mid]:\n",
     "            start = mid+1\n",
     "        else:\n",
-    "            return iterations, mid # target found at mid\n",
+    "            return iterations,mid # target found at mid\n",
     "    return -1 # target not found\n",
     "\n",
     "    \n",
     "\n",
     "#example\n",
     "list1 = [1,4,6,22,34,45,54,65,76,86,97,100]\n",
-    "print(binary_search(list1, target=97))"
+    "print(binary_search(list1, target=97))\n",
+    "\n",
+    "list2 = ['a', 'b', 'd','e']\n",
+    "print(binary_search(list2,target='d'))"
    ]
   },
   {
@@ -172,19 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "40d1f0ec",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0, 2]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 6]\n"
+     ]
     }
    ],
    "source": [
@@ -196,14 +197,84 @@
     "    while row < len(list1) and col >= 0:\n",
     "        if target == list1[row][col]:\n",
     "            return [row,col]\n",
-    "        elif target < list1[row][col]:\n",
+    "        elif list1[row][col] < target:\n",
     "            row += 1\n",
     "        else:\n",
     "            col -= 1\n",
+    "    return -1\n",
+    "# example\n",
+    "list1 = [[1,23,34,52,64,65,70],[2,25,35,57,66,68,72]]\n",
+    "print(binary_search_on_2D(list1=list1, target=72))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9e420c72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Optimized way of Binary Search in Sorted Matrix\n",
+    "\n",
+    "def simple_BS(list1:list, row:int, cStart: int, cEnd: int, target: int):\n",
+    "    while cStart <= cEnd:\n",
+    "        Cmid = (cStart+ cEnd) // 2\n",
+    "        if target == list1[row][Cmid]:\n",
+    "            return [row,Cmid]\n",
+    "        elif target < list1[row][Cmid]:\n",
+    "            CEnd = Cmid - 1\n",
+    "        else:\n",
+    "            CStart = Cmid + 1\n",
+    "    return -1\n",
+    "\n",
+    "def binary_search_on_2D_optim(list1, target):\n",
+    "    # find out mid column and mid row\n",
+    "    rows = len(list1)\n",
+    "    cols = len(list1[0])\n",
+    "\n",
+    "    if rows == 1:\n",
+    "        simple_BS(list1,rows=0, cStart=0, cEnd=len(list1[0]), target = target)\n",
+    "    \n",
+    "    rStart = 0\n",
+    "    rEnd = len(list1)\n",
+    "    Cmid = cols//2\n",
+    "\n",
+    "    while rStart < (rEnd-1): ## run this loop until 2 rows are remaining\n",
+    "        mid = (rStart+rEnd)//2\n",
+    "\n",
+    "        if target == list1[mid][Cmid]:\n",
+    "            return [mid, Cmid]\n",
+    "        elif target < list1[mid][Cmid]:\n",
+    "            rEnd = mid\n",
+    "        else:\n",
+    "            rStart = mid\n",
+    "        \n",
+    "    if list1[rStart][Cmid] == target:\n",
+    "        return [rStart, Cmid]\n",
+    "    if rStart + 1 < rows and list1[rStart+1][Cmid] == target:\n",
+    "        return [rStart+1, Cmid]\n",
+    "    \n",
+    "    if target <= list1[rStart][mid-1]:\n",
+    "        return simple_BS(list1, row=rStart, cStart=0, cEnd=Cmid-1, target=target)\n",
+    "    elif target >= list1[rStart][mid+1] and target <= list1[rStart][cols-1]:\n",
+    "        return simple_BS(list1, row = rStart, cStart = Cmid+1, cEnd=cols-1, target=target)\n",
+    "    elif rStart + 1 < rows and target <= list1[rStart+1][mid-1]:\n",
+    "        return simple_BS(list1, row = rStart+1, cStart = 0, cEnd=Cmid-1, target=target)\n",
+    "    else:\n",
+    "        return simple_BS(list1, row = rStart+1, cStart = Cmid+1, cEnd=cols-1, target =target )\n",
+    "\n",
     "\n",
     "# example\n",
-    "list1 = [[1,23,343,5,64,65,70],[2,25,344,7,66,68,72]]\n",
-    "binary_search_on_2D(list1, target=343)\n"
+    "list1 = [[1,2,3,4,5,6],[7,8,9,10,11,12],[13,14,15,16,17,18]]\n",
+    "print(binary_search_on_2D_optim(list1, target=17))"
    ]
   }
  ],
