--- a/Leetcode/Searching.ipynb
+++ b/Leetcode/Searching.ipynb
@@ -127,8 +127,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "73532978",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Floor of a number - biggest number in array less than or equal to target\n",
+    "\n",
+    "def floor(list1:list, target:int) -> int:\n",
+    "    start, end = 0, len(list1)-1\n",
+    "    while start <= end:\n",
+    "        mid = (start+end)//2\n",
+    "        if list1[mid] == target:\n",
+    "            return mid\n",
+    "        elif target < list1[mid]:\n",
+    "            end = mid-1\n",
+    "        else:\n",
+    "            start = mid+1\n",
+    "    return list1[end]\n",
+    "\n",
+    "#example\n",
+    "\n",
+    "list1 = [1,4,5,7,9,10,11,18]\n",
+    "print(floor(list1,target=6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7782f4c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 744. Find Smallest Letter Greater Than Target\n",
+    "\n",
+    "class Solution:\n",
+    "    def nextGreatestLetter(self, letters, target):\n",
+    "        start, end = 0, len(letters) - 1\n",
+    "        while start <= end:\n",
+    "            mid = (start + end) // 2\n",
+    "            if letters[mid] <= target:    \n",
+    "                start = mid + 1\n",
+    "            else:\n",
+    "                end = mid - 1\n",
+    "        return letters[start % len(letters)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbe222a0",
    "metadata": {},
    "outputs": [],
    "source": []
