two pointers blind75

--- a/Leetcode/Neetcode150.ipynb
+++ b/Leetcode/Neetcode150.ipynb
@@ -33,8 +33,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2770be53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Longest Substring Without Repeating Characters\n",
+    "\n",
+    "def lengthOfLongestSubstring(self, s: str) -> int:\n",
+    "        char_set = set()\n",
+    "        left = 0\n",
+    "        max_length = 0\n",
+    "\n",
+    "        for right in range(len(s)):\n",
+    "            while s[right] in char_set:\n",
+    "                char_set.remove(s[left])\n",
+    "                left+=1\n",
+    "            char_set.add(s[right])\n",
+    "            max_length = max(max_length,right-left+1)\n",
+    "        return max_length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a7610660",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 11. Container With Most Water\n",
+    "\n",
+    "def maxArea(self, height: list[int]) -> int:\n",
+    "        l, r = 0, len(height)-1\n",
+    "        max_area = 0\n",
+    "        while l < r:\n",
+    "            h = min(height[l],height[r])\n",
+    "            max_area = max(max_area,h * (r-l))\n",
+    "            if height[l]<height[r]:\n",
+    "                l += 1\n",
+    "            else:\n",
+    "                r -= 1\n",
+    "        return max_area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "68db3ddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1004. Max Consecutive Ones III\n",
+    "def longestOnes(self, nums: list[int], k: int) -> int:\n",
+    "        l = 0\n",
+    "        max_len = 0\n",
+    "        zero = 0\n",
+    "\n",
+    "        for r in range(l,len(nums)):\n",
+    "            if nums[r] == 0:\n",
+    "                zero += 1\n",
+    "\n",
+    "            while zero > k:\n",
+    "                if nums[l] == 0:\n",
+    "                    zero -= 1\n",
+    "                l += 1\n",
+    "            max_len = max(max_len,r-l+1)\n",
+    "        return max_len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05b4aa86",
    "metadata": {},
    "outputs": [],
    "source": []
