--- a/Leetcode/Searching.ipynb
+++ b/Leetcode/Searching.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "7782f4c1",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,9 @@
     "                start = mid + 1\n",
     "            else:\n",
     "                end = mid - 1\n",
-    "        return letters[start % len(letters)]"
+    "        if start == len(letters):\n",
+    "            return letters[0]\n",
+    "        else: return letters[start]"
    ]
   },
   {
