binary search problem 34

--- a/Leetcode/Searching.ipynb
+++ b/Leetcode/Searching.ipynb
@@ -180,7 +180,13 @@
     "                end = mid - 1\n",
     "        if start == len(letters):\n",
     "            return letters[0]\n",
-    "        else: return letters[start]"
+    "        else: return letters[start]\n",
+    "\n",
+    "## we can also write the return condition as:\n",
+    "\"\"\"\n",
+    "return letters[start%len(letters)]\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
@@ -189,7 +195,33 @@
    "id": "dbe222a0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## 34. Find First and Last Position of Element in Sorted Array\n",
+    "\n",
+    "def searchRange(self, nums: List[int], target: int) -> List[int]:\n",
+    "        def search(nums, target, findfirst: bool):\n",
+    "            start, end = 0, len(nums) - 1\n",
+    "            ans = -1\n",
+    "            while start <= end:\n",
+    "                mid = (start + end) // 2\n",
+    "                if target < nums[mid]:\n",
+    "                    end = mid - 1\n",
+    "                elif target > nums[mid]:\n",
+    "                    start = mid + 1\n",
+    "                else:\n",
+    "                    ans = mid\n",
+    "                    if findfirst:\n",
+    "                        end = mid - 1\n",
+    "                    else:\n",
+    "                        start = mid + 1\n",
+    "            return ans\n",
+    "\n",
+    "        ans = [-1, -1]\n",
+    "        ans[0] = search(nums, target, True)      # find first occurrence\n",
+    "        if ans[0] != -1:\n",
+    "            ans[1] = search(nums, target, False)  # find last occurrence\n",
+    "        return ans"
+   ]
   }
  ],
  "metadata": {
