--- a/Leetcode/Searching.ipynb
+++ b/Leetcode/Searching.ipynb
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dbe222a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "## 34. Find First and Last Position of Element in Sorted Array\n",
     "\n",
-    "def searchRange(self, nums: List[int], target: int) -> List[int]:\n",
+    "def searchRange(self, nums: list[int], target: int) -> list[int]:\n",
     "        def search(nums, target, findfirst: bool):\n",
     "            start, end = 0, len(nums) - 1\n",
     "            ans = -1\n",
@@ -222,6 +222,34 @@
     "            ans[1] = search(nums, target, False)  # find last occurrence\n",
     "        return ans"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "849a4c4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 852. Peak Index in a Mountain Array\n",
+    "\n",
+    "def peakIndexInMountainArray(self, arr: list[int]) -> int:\n",
+    "        start, end = 0, len(arr)-1\n",
+    "        while start < end:\n",
+    "            mid = (start+end)//2\n",
+    "            if arr[mid]>arr[mid+1]:\n",
+    "                end = mid\n",
+    "            else:\n",
+    "                start = mid+1\n",
+    "        return start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a738299",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
